--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
 	"description": "Sync Codility submissions to your Github",
 	"version": "1.0",
 	"background": {
-		"service_worker": "background.js",
+		"service_worker": "service-worker.js",
 		"type": "module"
 	},
 	"action": {
@@ -16,5 +16,6 @@
 		"48": "images/logo_48.png",
 		"128": "images/logo_128.png"
 	},
-	"permissions": ["identity", "tabs", "storage"]
+	"permissions": ["identity", "tabs", "storage"],
+	"host_permissions": ["https://github.com/*"]
 }
