--- a/manifest.json
+++ b/manifest.json
@@ -17,5 +17,5 @@
 		"128": "images/logo_128.png"
 	},
 	"permissions": ["identity", "tabs", "storage"],
-	"host_permissions": ["https://github.com/*"]
+	"host_permissions": ["https://github.com/*", "https://api.github.com/*"]
 }
