--- a/manifest.json
+++ b/manifest.json
@@ -4,11 +4,17 @@
 	"description": "Sync Codility submissions to your Github",
 	"version": "1.0",
 	"background": {
-		"service_worker": "service-worker.js",
+		"service_worker": "scripts/service-worker.js",
 		"type": "module"
 	},
+	"content_scripts": [
+		{
+			"matches": ["*://app.codility.com/*"],
+			"js": ["scripts/codility.js"]
+		}
+	],
 	"action": {
-		"default_popup": "popup/popup.html"
+		"default_popup": "pages/popup/popup.html"
 	},
 	"icons": {
 		"16": "images/logo_16.png",
@@ -16,6 +22,10 @@
 		"48": "images/logo_48.png",
 		"128": "images/logo_128.png"
 	},
-	"permissions": ["identity", "tabs", "storage"],
-	"host_permissions": ["https://github.com/*"]
+	"permissions": ["identity", "tabs", "storage", "webRequest"],
+	"host_permissions": [
+		"https://github.com/*",
+		"https://api.github.com/*",
+		"*://*.codility.com/*"
+	]
 }
