fix: issue causing port to close too early

--- a/manifest.json
+++ b/manifest.json
@@ -14,8 +14,7 @@
 		},
 		{
 			"matches": ["https://github.com/?referrer=codilitysync&*"],
-			"js": ["content-scripts/oauth.js"],
-			"type": "module"
+			"js": ["content-scripts/oauth.js"]
 		}
 	],
 	"action": {
