--- a/manifest.json
+++ b/manifest.json
@@ -26,6 +26,6 @@
 		"48": "images/logo_48.png",
 		"128": "images/logo_128.png"
 	},
-	"permissions": ["tabs", "storage"],
+	"permissions": ["storage"],
 	"host_permissions": ["*://*.github.com/*"]
 }
