--- a/manifest.json
+++ b/manifest.json
@@ -21,11 +21,11 @@
 		"default_popup": "pages/popup/popup.html"
 	},
 	"icons": {
-		"16": "images/logo_16.png",
-		"32": "images/logo_32.png",
-		"48": "images/logo_48.png",
-		"128": "images/logo_128.png"
+		"16": "images/logos/logo_16.png",
+		"32": "images/logos/logo_32.png",
+		"48": "images/logos/logo_48.png",
+		"128": "images/logos/logo_128.png"
 	},
-	"permissions": ["tabs", "storage"],
+	"permissions": ["storage"],
 	"host_permissions": ["*://*.github.com/*"]
 }
